<resources>
    <string name="app_name">Techtronics</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="unexpected_error">Unexpected error: </string>
    <string name="invalid_credentials">Helytelen email-cím vagy jelszó</string>
    <string name="successful_register">Sikeres Regisztáció</string>
    <string name="password">Jelszó</string>
    <string name="login">Belépés</string>
    <string name="email">Email</string>
    <string name="loginTitle">Bejelentkezés</string>
    <string name="search">Keresés</string>
    <string name="registerTitle">Regisztráció</string>
    <string name="username">Felhasználónév</string>
    <string name="register">Regisztráció</string>
    <string name="image_for_product">Image for product</string>
    <string name="product">Product</string>
    <string name="product_price">Product Price</string>
    <string name="login_nav">Bejelentkezés</string>
    <string name="register_nav">Regisztráció</string>
    <string name="main_nav">Főoldal</string>
    <string name="cart_nav">Kosár</string>
    <string name="profile_nav">Fiók</string>
    <string name="logout_nav">Kijelentkezés</string>
    <string name="register_error">Ezzel az email címmel már regisztráltak</string>


</resources>