<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single"
        android:id="@+id/navigation_view">
        <item
            android:icon="@drawable/home"
            android:id="@+id/nav_home"
            android:title="@string/main_nav"/>
        <item
            android:icon="@drawable/basket_icon"
            android:id="@+id/nav_basket"
            android:title="@string/cart_nav"/>
        <item
            android:icon="@drawable/person_icon"
            android:id="@+id/nav_options"
            android:title="@string/profile_nav"/>
        <item
            android:icon="@drawable/logout"
            android:id="@+id/nav_logout"
            android:title="@string/logout_nav"
            />
    </group>
</menu>